# dcc027-galaxian

./: CMakeLists.txt  Makefile  README.md
assets/shaders/: alien.fr  alien.vt  bullet.fr  common.vt  powerup.vt
assets/sounds/: README.md
src/: .main.cc.swp  .shader.cc.swp  .shader.h.swp  alien.cc  alien.h  bullet.cc  bullet.h  bullet.vertex  f.cpp  game.cc  game.h  game2.cc  game_object.h  game_original.h  health_powerup.cc  health_powerup.h  main.cc  main2.cpp  main3.cc  main4.cc  movespeed_powerup.cc  movespeed_powerup.h  powerup.cc  powerup.h  shader.cc  shader.frag  shader.h  shader.vertexshader  shader2.frag  stars.cc  stars.frag  stars.h  texture.cc  texture.h  triangle.cc  triangle.h  triangle.vertex
src/collision/: .polygon.cc.swp  .vector2D.h.swp  polygon.cc  polygon.h  vector2D.cc  vector2D.h
src/math/: matrix.cc  matrix.h
src/spaceship/: spaceship.cc  spaceship.h
